@@ -1,6 +1,19 @@
 #ifndef __SP_INTERFACE_H__
 #define __SP_INTERFACE_H__
 
+/*
+ * Main UI stuff
+ *
+ * Authors:
+ *   Lauris Kaplinski <lauris@kaplinski.com>
+ *   Frank Felfe <innerspace@iname.com>
+ *
+ * Copyright (C) 1999-2002 authors
+ * Copyright (C) 2001-2002 Ximian, Inc.
+ *
+ * Released under GNU GPL, read the file 'COPYING' for more information
+ */
+
 #include "view.h"
 
 void sp_create_window (SPViewWidget *vw, gboolean editable);
@@ -11,6 +24,7 @@ void sp_ui_close_view (GtkWidget * widget);
 
 /* I am not sure, what is the right place for that (Lauris) */
 
+GtkWidget *sp_ui_main_menu (void);
 GtkWidget *sp_ui_generic_menu (SPView *v, SPItem *item);
 
 #endif
